[package]
name = "distributed_systems"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maelstrom-node = "0.1.6"
async-trait = "0.1.75"
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.193"
serde_json = "1.0.108"
log = "0.4.20"
tokio-context = "0.1.3"

[[bin]]
name = "echo"